@@ -2,24 +2,8 @@ TODO:
 
     * Document methods with javadoc.
     
-    * Allow GUI models to register change listeners with XMLDocuments and
-      AdapterNodes. This will allow GUI models to be updated automatically when
-      the DOM is changed. Also add property change listeners so that views can
-      be updated when properties (options) change. Update the views to register
-      listeners with the XMLDocuments and AdapterNodes so they update themselves
-      when they change. How should I do this? How can I use the Document
-      interface to register change listeners? Can I create my own implementation
-      of the Document interface without having to write a DOMBuilder?
-    
-    * Currently AdapterNodes only wrap the Node interface and create new
-      instances of itself when queried. Have AdapterNode implement the TreeNode
-      interface and create a tree mirroring the DOM so that new AdapterNodes are
-      not created on the fly. This will allow the TreeModel to have a static
-      model i.e. The instances of AdapterNode won't change everytime the
-      TreeModel is queried by the JTree. e.g. Currently when I create a TreePath
-      and call updateUI the TreePath is no longer valid because it contains
-      objects no longer in the TreeModel. So when updating the UI I can't tell
-      which Nodes were previously visable.
+    * Add property change listeners to the XMLDocument interface so that the GUI
+      can be updated automatically when the properties (options) change.
     
     * Research the EntityResolver class and see if it can be used to resolve
       DTD files.
@@ -37,6 +21,9 @@ TODO:
       way users can fix wellformedness errors in the editor.
     
     * Release new version (0.2.1).
+    
+    * Add relevent command-line option parsing to jsXe. At least things like
+      '--version' and '--help' should be present.
     
     * Build an adapter for DocumentBuilder so that it implements the DOM3
       standard DOMBuilder interface? Maybe use it with DOMSerializer to created
